Save local changes to change laptop

--- a/catch-of-the-day/public/index.html
+++ b/catch-of-the-day/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Catch of the Day</title>
+    <title>WareMax Inc. -- RAID</title>
   </head>
   <body>
     <input type="checkbox" id="fold">
     <label for="fold">Fold</label>
 
+    <!-- #main is mounting point -->
     <div id="main">
       <!-- This is where our React app will go -->
     </div>
